# wasm-object-detection

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  JETSON_SETUP.md  KUBERNETES_SETUP.md  README.md  baremetal_metrics.json  config.json  export_yolo_cpu.py  export_yolo_gpu.py  graph.py  k8s-deployment.yaml  multi_client_orchestration_deploy_results.json  multi_client_orchestration_metrics.json  pod.yaml  push-to-registry.sh  rebuild_and_run.sh  requirements.txt  service.yaml  test_client.py  test_client_video.py  test_udp_video.py  udp_video_metrics.json  verify_setup.sh
inference/: Cargo.toml  test_bindings.rs
inference/src/: lib-witbindings.rs  lib.rs  lib.rs.backup
inference/wit/: world.wit
kubernetes/: docker_pod.yaml  k8s-deployment.yaml  registry.yaml  service.yaml
kubernetes/orchestration/latency-probe/: Dockerfile.latency-probe  (+2 more)
metrics/: baremetal_resource_usage.jsonl  docker_cold_start.json  docker_container_metrics.json  docker_deploy_results.json  docker_metrics.json  docker_resource_usage.jsonl  docker_video_metrics.json  multi_client_deploy_results.json  multi_client_k8s_deploy_results.json  multi_client_k8s_metrics.json  multi_client_k8s_scheduler_deploy_results.json  multi_client_k8s_scheduler_results.json  multi_client_k8s_video_metrics.json  multi_client_orchestration_deploy_results.json  multi_client_orchestration_metrics.json  multi_client_video_metrics.json  wasm_cold_start.json  wasm_metrics.json  wasm_resource_usage.jsonl  wasm_video_metrics.json  wasmtime_container_deploy_results.json  wasmtime_container_metrics.json  wasmtime_container_resource_usage.jsonl  wasmtime_metrics.json  wasmtime_resource_usage.jsonl  wasmtime_video_metrics.json
scripts/: export_yolo.py  push-to-registry.sh  verify_jetson_setup.sh  verify_setup.sh
server/: Cargo.toml  build.rs
server/.cargo/: config.toml
server/src/: main.rs
test-scripts/: aggregate_deploy_metrics.py  benchmark_pod_coldstart.py  monitor_wasmtime_resources.py  pod_template_test.yaml  simulate_k8s_scheduler.py  simulate_multi_client_deploy.py  test_tcp_client.py  test_tcp_video.py  test_udp_video.py
(+4 files in other folders)
