[package]
name = "wasm_inference"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# wasmtime = {optional = true, version = "32.0.0"}
# wasi-common = { optional = true, version = "32.0.0" }
# wasmtime-wasi = { optional = true, version = "32.0.0"}
# wasmtime-wasi-threads = { optional = true, version = "32.0.0" }
# wasmtime-wasi-nn = { version = "32.0.0", features = ["pytorch"] }
wasi-nn = "0.6.0"
image = "0.24"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
anyhow = "1.0"
